# PFSP

./: .gitignore  README.md  main.py  requirements.txt  simple_run.sh
pfsp_core/: CMakeLists.txt  README.md  Workspace_AMSPDemo.code-workspace  run_pfsp_first.sh  run_pfsp_second.sh  run_pfsp_zero.sh  workspace.code-workspace
pfsp_core/.cache/clangd/index/: AMSPCorePluginSmartConverterDrivablePath.h.A80859B955AF6A4A.idx  AMSPCorePluginSmartConverterDrivablePath.hpp.F7396A3DAFB91E6E.idx  AMSPCorePluginSmartConverterInternalObject.h.CE8210A8AFD2EFD8.idx  AMSPCorePluginSmartConverterInternalObject.hpp.E9D832A4ADA17F5E.idx  AMSPCorePluginSmartConverterPriorityObject.h.95144AD77475F1EB.idx  AMSPCorePluginSmartConverterPriorityObject.hpp.3788237031839EB2.idx  AMSPCorePluginSmartConverterRoadInfo.h.36BFA124C75AE2FA.idx  AMSPCorePluginSmartConverterRoadInfo.hpp.06787E01DCE067C1.idx  AService.h.1C90CDE3CC618A12.idx  AService.h.349B24C1F47BAEF3.idx  AService.h.5360F169A30A02DA.idx  AService.h.7B3B08B46EFBA54D.idx  AService.h.7FFF5FEF9485432C.idx  AService.h.8156B44417274ABC.idx  AService.h.CFCA2C9BF8C01847.idx  AService.h.E15E29E2130A018C.idx  AService.h.F1DF071DE6528AE4.idx  AService.h.FCB395C6DE5A972E.idx  AService.h.FEADE56D8A9C7573.idx  AServiceMessage.h.17E96FE2EA92E000.idx  AServiceMessage.h.2CD10E293DD0D75F.idx  AServiceMessage.h.38A0400543AAB8AA.idx  AServiceMessage.h.46C31DFB0A667845.idx  AServiceMessage.h.471224A2C67CBCC1.idx  AServiceMessage.h.57BD78DB577F3360.idx  AServiceMessage.h.943FECE2331FD68E.idx  AServiceMessage.h.9B81C18916C9F8FD.idx  AServiceMessage.h.C1A138620875A097.idx  AServiceMessage.h.D22F1570782EB418.idx  AServiceMessage.h.E37DF88C932165EE.idx  CDebugBuffer.h.0474853CF99965FC.idx  CDebugBuffer.h.0674E4216FCD3995.idx  CDebugBuffer.h.167E0EF19F680D24.idx  CDebugBuffer.h.3672FDA1A698BF63.idx  CDebugBuffer.h.4514D7C0E0CAF6B3.idx  CDebugBuffer.h.4BF0B7DBD3752ECA.idx  CDebugBuffer.h.546EA0CB3C58E0ED.idx  CDebugBuffer.h.7D35B2A618C94312.idx  CDebugBuffer.h.BB52EE45B54E23A5.idx  CDebugBuffer.h.E27855D5E6C39C9D.idx  (+980 more)
pfsp_core/architecture_diagram/: AMSP_SW_Architecture_Diagrams_[02.05.2021].drawio  cordinator.drawio  mapping.drawio
pfsp_core/pfsp_code_generator/component_generator/: .gitignore  .gitmodules  cpp_generator.py  cpp_json_path.py  generate_base_component.py  generate_base_component_cmake.py  generate_host_component.py  generate_host_component_cmake.py  generate_main_shell_script.py  generate_mw_start_header.py  generate_shell_script.py  generate_sub_shell_script.py  generation_coordinator.py  main_generator_for_components.py
pfsp_core/pfsp_code_generator/smart_converter_generator/: main_generator_for_smart_converter.py  main_generator_for_smart_converter.py~
pfsp_core/pfsp_component_core/: CMakeLists.txt
pfsp_core/pfsp_component_core/error_handler/: CMakeLists.txt
pfsp_core/pfsp_component_core/error_handler/include/: pfsp_core_error_handler.h
pfsp_core/pfsp_component_core/error_handler/src/: pfsp_core_error_handler.cpp
pfsp_core/pfsp_component_core/mode_manager/: CMakeLists.txt
pfsp_core/pfsp_component_core/mode_manager/include/: pfsp_core_mode_manager.h
pfsp_core/pfsp_component_core/mode_manager/src/: pfsp_core_mode_manager.cpp
pfsp_core/pfsp_component_core/smart_converter/: component_internal_data_memmanager.h  smart_converter_core_base.h  smart_converter_interface_memmanager.h
pfsp_core/pfsp_component_plugin/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/component_common/: host_component_message.h  host_component_runner.h  host_component_service.h
pfsp_core/pfsp_component_plugin/component_generated/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/component_generated/base_host_component_0/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/component_generated/base_host_component_1/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/component_generated/base_host_component_2/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/component_generated/external_interface/: smart_converter_external_interface.h
pfsp_core/pfsp_component_plugin/error_handler/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/error_handler/include/: pfsp_plugin_error_handler.h  pfsp_plugin_error_handler_message.h  pfsp_plugin_error_handler_runner.h
pfsp_core/pfsp_component_plugin/error_handler/src/: pfsp_plugin_error_handler.cpp  pfsp_plugin_error_handler_message.cpp  pfsp_plugin_error_handler_runner.cpp
pfsp_core/pfsp_component_plugin/mode_manager/: CMakeLists.txt
pfsp_core/pfsp_component_plugin/mode_manager/include/: pfsp_plugin_mode_manager.h  pfsp_plugin_mode_manager_message.h  pfsp_plugin_mode_manager_runner.h
pfsp_core/pfsp_component_plugin/mode_manager/src/: pfsp_plugin_mode_manager.cpp  pfsp_plugin_mode_manager_message.cpp  pfsp_plugin_mode_manager_runner.cpp
pfsp_core/pfsp_config/json/: config1.json  config2.json  config3.json  pfsp_main_config.json  plugin_mode_manager.json  run_with_json.sh  smart_converter_0_component1.json  smart_converter_1_component2.json  smart_converter_2_component3.json  time.json
pfsp_core/pfsp_config/xml/: config1.xml  config2.xml  config3.xml  pfsp_main_config.xml  plugin_mode_manager.xml  run.sh  time.xml
pfsp_core/pfsp_host_component_base/: pfsp_host_component_base.h
pfsp_core/pfsp_include/: host_application_topic.h  pfsp_common.h  pfsp_enum.h  pfsp_hostapp_common.h  pfsp_typedef.h
pfsp_core/pfsp_lib/PFSPMiddleware/cmake/: FindPFSP_MW-debug.cmake  FindPFSP_MW-noconfig.cmake  FindPFSP_MW.cmake
pfsp_core/pfsp_main/: CMakeLists.txt  pfsp_main.cpp
pfsp_core/pfsp_middleware_start/: CMakeLists.txt
pfsp_core/pfsp_middleware_start/include/: pfsp_mw_start.h  pfsp_mw_start_original.h
pfsp_core/pfsp_middleware_start/src/: pfsp_mw_start.cpp
pfsp_core/templateCode/: run_pfsp_second.sh
pfsp_core/templateCode/FirstTest/host_components/: CMakeLists.txt
pfsp_core/templateCode/host_components/: CMakeLists.txt
pfsp_core/templateCode/host_components/host_application_1/: CMakeLists.txt  FirstComponent.cpp
pfsp_core/templateCode/pfspConfig/: run.sh
pfsp_core/templateCode/pfspConfig/xml/: time.xml  (+4 more)
(+224 files in other folders)
